# cityscale

./: .gitignore  Cargo.toml  README.md  TODO  build.rs  dev.sh  dev2.sh  schema.sql
.github/workflows/: ci.yml
docker/: Dockerfile
image/: Dockerfile  build.sh
image2/: Dockerfile  run.sh  test.sh  topology
image2/vschema/myshardedks/: vschema.json
src/: api.rs  config.rs  main.rs  server.rs
src/api/: settings.rs  sql.rs
test/: index.ts  package.json  pnpm-lock.yaml
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx
web/src/app/: [dbId].tsx  backups.tsx  index.ts  index.tsx  layout.tsx  login.tsx
web/src/app/settings/: index.tsx
