[package]
name = "cityscale"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
