[package]
name = "cityscale"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.0"
include_dir = "0.7.3"
mysql_async = { version = "0.34.1", default-features = false, features = [
    "minimal",
    "rustls-tls",
] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
    "process",
] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tower-serve-static = { version = "0.1.1", features = ["metadata"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
